--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "web3-react": "5.0.5"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "2.2.3",
     "@nomiclabs/hardhat-etherscan": "3.1.7",
     "@nomiclabs/hardhat-waffle": "2.0.6",
     "@openzeppelin/contracts": "4.9.3",
     "@openzeppelin/contracts-upgradeable": "4.9.3",
-    "@openzeppelin/hardhat-upgrades": "1.28.0",
+    "@openzeppelin/hardhat-upgrades": "2.0.2",
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@typechain/ethers-v5": "11.1.1",
     "@typechain/hardhat": "8.0.3",
