--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install -g yarn
+          corepack enable
           yarn install
 
       - name: Run test
