--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "lint:sol": "npx solhint 'contracts/**/*.sol'",
-    "prepare": "husky install",
+    "prepare": "husky",
     "start": "next start",
     "test": "npx hardhat test"
   },
@@ -66,7 +66,7 @@
     "ethers": "5.7.2",
     "hardhat": "2.19.4",
     "hardhat-gas-reporter": "1.0.9",
-    "husky": "8.0.3",
+    "husky": "9.0.6",
     "nano-staged": "0.8.0",
     "next-secure-headers": "2.2.0",
     "postcss": "8.4.33",
