--- a/package.json
+++ b/package.json
@@ -5,24 +5,15 @@
     "build": "npx hardhat compile --network localhost && next build",
     "clean": "npx hardhat clean && rimraf -rf src/types",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "biome lint .",
+    "format": "biome format . --write",
+    "check": "biome check .",
     "lint:sol": "npx solhint 'contracts/**/*.sol'",
-    "prepare": "husky",
     "start": "next start",
     "test": "npx hardhat test"
   },
-  "nano-staged": {
-    "*.{js,ts,tsx}": [
-      "eslint --cache --quiet --fix",
-      "prettier --write",
-      "rustywind --write"
-    ],
-    "*.{css,json,md,yml,yaml}": [
-      "prettier --write"
-    ],
-    "package.json": "sort-package-json"
-  },
   "dependencies": {
+    "@ethersproject/abi": "5.7.0",
     "@ethersproject/providers": "5.7.2",
     "@ethersproject/units": "5.7.0",
     "@tailwindcss/typography": "0.5.12",
@@ -30,7 +21,7 @@
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/network-connector": "6.2.9",
     "@web3-react/walletconnect-connector": "6.2.13",
-    "daisyui": "4.9.0",
+    "daisyui": "4.10.1",
     "loglevel": "1.9.1",
     "next": "14.1.4",
     "react": "18.2.0",
@@ -38,6 +29,7 @@
     "web3-react": "5.0.5"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.6.4",
     "@nomicfoundation/hardhat-chai-matchers": "1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "1.0.10",
     "@nomicfoundation/hardhat-toolbox": "2.0.2",
@@ -46,42 +38,31 @@
     "@openzeppelin/contracts": "5.0.2",
     "@openzeppelin/contracts-upgradeable": "5.0.2",
     "@openzeppelin/hardhat-upgrades": "1.28.0",
-    "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@typechain/ethers-v5": "11.1.2",
     "@typechain/ethers-v6": "0.5.1",
     "@typechain/hardhat": "9.1.0",
     "@types/chai": "4.3.14",
     "@types/mocha": "10.0.6",
-    "@types/node": "20.12.2",
-    "@types/react": "18.2.74",
-    "@types/react-dom": "18.2.23",
-    "@typescript-eslint/eslint-plugin": "7.5.0",
-    "@typescript-eslint/parser": "7.5.0",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.75",
+    "@types/react-dom": "18.2.24",
     "autoprefixer": "10.4.19",
     "chai": "4.4.1",
     "dotenv": "16.4.5",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
-    "eslint-config-productsway": "1.3.2",
     "ethers": "5.7.2",
     "hardhat": "2.22.2",
     "hardhat-gas-reporter": "1.0.10",
-    "husky": "9.0.11",
-    "nano-staged": "0.8.0",
     "next-secure-headers": "2.2.0",
     "postcss": "8.4.38",
-    "prettier": "3.2.5",
-    "prettier-plugin-solidity": "1.3.1",
     "rimraf": "5.0.5",
     "rustywind": "0.21.1",
     "solgraph": "1.0.2",
-    "solhint": "4.5.2",
-    "solidity-coverage": "0.8.11",
-    "sort-package-json": "2.10.0",
+    "solhint": "4.5.4",
+    "solidity-coverage": "0.8.12",
     "tailwindcss": "3.4.3",
     "ts-node": "10.9.2",
     "typechain": "8.3.2",
-    "typescript": "5.4.3"
+    "typescript": "5.4.4"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "pnpm@8.15.6"
 }
