:busts_in_silhouette: Add @warengonzaga as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -19,6 +19,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "warengonzaga",
+      "name": "Waren Gonzaga",
+      "avatar_url": "https://avatars.githubusercontent.com/u/15052701?v=4",
+      "profile": "https://bio.warengonzaga.com/",
+      "contributions": [
+        "financial"
+      ]
     }
   ],
   "contributorsPerLine": 7
